--- a/archive.html
+++ b/archive.html
@@ -23,6 +23,13 @@
     <header class="header">
         <nav class="nav container">
             <a href="/" class="nav__logo">Hi!</a>
+            
+            <ul class="nav__list" id="main-menu">
+                <li class="nav__item"><a href="/#about" class="nav__link" data-content-key="nav.about">About</a></li>
+                <li class="nav__item"><a href="/#experience" class="nav__link" data-content-key="nav.experience">Experience</a></li>
+                <li class="nav__item"><a href="/#projects" class="nav__link" data-content-key="nav.projects">Projects</a></li>
+                <li class="nav__item"><a href="/#contact" class="nav__link" data-content-key="nav.contact">Contact</a></li>
+            </ul>
             <div class="nav__actions">
                 <button type="button" class="nav__action-btn" id="theme-toggle" aria-label="Toggle theme">
                     <span class="icon-light" data-icon-key="theme-on"></span>
