--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
 <body id="page-404" class="loading-content">
     <header class="header">
         <nav class="nav container">
-            <a href="/" class="nav__logo">Hi!</a>
+            <a href="/index.html" class="nav__logo">Hi!</a>
                         
             <ul class="nav__list" id="main-menu">
                 <li class="nav__item"><a href="/#about" class="nav__link" data-content-key="nav.about">About</a></li>
