--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <header class="header">
         <nav class="nav container">
-            <a href="/" class="nav__logo">Hi!</a>
+            <a href="/index.html" class="nav__logo">Hi!</a>
             <ul class="nav__list" id="main-menu">
                 <li class="nav__item"><a href="#about" class="nav__link" data-content-key="nav.about">About</a></li>
                 <li class="nav__item"><a href="#experience" class="nav__link" data-content-key="nav.experience">Experience</a></li>
