migrate to next.js

--- a/legacy_backup/archive.html
+++ b/legacy_backup/archive.html
@@ -6,7 +6,7 @@
     
     <title>Project Archive | Wardana Dwi Mulia</title>
     <meta name="author" content="Wardana Dwi Mulia">
-    <meta name="description" content="A complete archive of projects by Warda">
+    <meta name="description" content="A complete archive of projects by Wardana Dwi Mulia">
     <meta name="robots" content="noindex, follow">
 
     <link id="favicon-ico" rel="icon" href="./favicon.ico" sizes="any">
